--- a/Resources/Private/Language/locallang_be.xml
+++ b/Resources/Private/Language/locallang_be.xml
@@ -7,25 +7,42 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="pi1_title">MOOX-Frontend-User</label>
-			<label index="pi1_plus_wiz_description">Frontend user login, registration, profile etc.</label>
+			<label index="pi1_plus_wiz_description">Frontend user login, registration, password recovery, profile etc.</label>
 			<label index="pi1_controller_selection">choose mode</label>
 			<label index="pi1_controller_selection.frontenduser_profile">profile</label>
+			<label index="pi1_controller_selection.frontenduser_passwordrecovery">password recovery</label>
 			<label index="pi1_controller_selection.not_configured">not configured</label>
 			<label index="pi1_preview_mode">mode</label>
+			<label index="pi1_storage_pid">storage pid for new users</label>
+			<label index="pi1_storage_pids">storage pids to include</label>
 			<label index="pi1_fe_group">fe group</label>
+			<label index="pi1_recovery_email_template">recovery email template</label>
+			<label index="pi1_recovery_sendername">recovery email sender name</label>
+			<label index="pi1_recovery_senderaddress">recovery email sender address</label>
 			<label index="rules">Rules</label>
 			<label index="rules_activated">Activated : An object that sets wich validation rules are activated. By changing this object is possible to deactivate some validations, or to activate them for extra security.</label>
 			<label index="rules_scores">Scores : Scores returned by the rules when they match. Negative values are for penalizations.</label>
 			<label index="error_messages">Error Messages</label>
+			<label index="verdicts">Verdicts : Pwstrength display names for the verdicts related to the progressClass. It has to have 5 elements, and they would be the 5 possible strength categories.</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="pi1_title">MOOX-Frontend-Benutzer</label>
-			<label index="pi1_plus_wiz_description">Frontend-Benutzer Login, Registrierung, Profilverwaltung etc.</label>
+			<label index="pi1_plus_wiz_description">Frontend-Benutzer Login, Registrierung, Passwort-Wiederherstellung, Profilverwaltung etc.</label>
 			<label index="pi1_controller_selection">Modus wählen</label>
 			<label index="pi1_controller_selection.frontenduser_profile">Profil bearbeiten</label>
+			<label index="pi1_controller_selection.frontenduser_passwordrecovery">Passwort-Wiederherstellung</label>
 			<label index="pi1_controller_selection.not_configured">nicht konfiguriert</label>	
 			<label index="pi1_preview_mode">Modus</label>
+			<label index="pi1_storage_pid">FE-User-Ordner für Speicherung neuer Firmen-Benutzer</label>
+			<label index="pi1_storage_pids">FE-User-Ordner die durch das Plugin verwaltet werden sollen</label>
 			<label index="pi1_fe_group">Benutzergruppenauswahl für neue Benutzer</label>
+			<label index="pi1_recovery_email_template">Vorlage für Passwort-Vergessen-Email</label>
+			<label index="pi1_recovery_sendername">Absender-Name der Email</label>
+			<label index="pi1_recovery_senderaddress">Absender-Adresse der Email</label>
+			<label index="rules">Regeln</label>
+			<label index="rules_activated">Activated : An object that sets wich validation rules are activated. By changing this object is possible to deactivate some validations, or to activate them for extra security.</label>
+			<label index="rules_scores">Scores : Scores returned by the rules when they match. Negative values are for penalizations.</label>
+			<label index="verdicts">Verdicts : Pwstrength display names for the verdicts related to the progressClass. It has to have 5 elements, and they would be the 5 possible strength categories.</label>
 		</languageKey>		
 	</data>
 </T3locallang>
