Some minor bugfixes and improvements

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -116,7 +116,10 @@
 				<source>Is MOOX user</source>
 				<target>Benutzer ist MOOX-Benutzer</target>				
 			</trans-unit>						
-			
+			<trans-unit id="tx_mooxfeusers_domain_model_frontenduser.is_moox_user">
+				<source>Is MOOX user</source>
+				<target>Benutzer ist MOOX-Benutzer</target>				
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
