--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -88,7 +88,14 @@
 			<trans-unit id="tx_mooxfeusers_domain_model_frontenduser.is_moox_user">
 				<source>Is MOOX user</source>							
 			</trans-unit>
-
+			<trans-unit id="tx_mooxfeusers_domain_model_frontenduser.quality">
+				<source>quality</source>				
+			</trans-unit>
+			
+			<trans-unit id="tx_mooxfeusers_domain_model_template">
+				<source>template</source>							
+			</trans-unit>	
+			
 		</body>
 	</file>
 </xliff>
